Fixed button alignment and input style

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,11 +18,16 @@ h1
   form
     text-align: center
     input
-      margin-bottom: .5em
+      height: 2em
+      width: 50%
+      text-align: center
+      font-size: 1.3em
+    .btn
+      margin: 1em
   .result
     background-color: #ddd
     min-height: 3em
-    margin: 1em 0 .5em
+    margin: 0 0 .5em
     font-size: 2em
     text-align: center
     padding: 1em
